Wrapped search behind feature flag

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,9 @@ var studioContext = {
   },
   upload_settings: {
     max_file_size_in_mbs: 10,
+  },
+  search_settings: {
+    enabled: true,
   }
 };
     </script>
